@@ -1,4 +1,5 @@
 2010-XX-XX
+  * Re-enabled some code that normalized the filenames for attachment
 
 
 2010-03-20
